RESOLVED FIXED 264429
[WGSL] Packed struct should not assume every nested struct is also packed
https://bugs.webkit.org/show_bug.cgi?id=264429
Summary [WGSL] Packed struct should not assume every nested struct is also packed
Tadeu Zagallo
Reported 2023-11-08 11:12:53 PST
...
Attachments
Radar WebKit Bug Importer
Comment 1 2023-11-08 11:13:11 PST
Tadeu Zagallo
Comment 2 2023-11-08 11:17:22 PST
EWS
Comment 3 2023-11-09 02:27:08 PST
Committed 270438@main (9c5b6978185e): <https://commits.webkit.org/270438@main> Reviewed commits have been landed. Closing PR #20182 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.